[metadata]
name = lora-mote-emulator
version = 1.0.2
author = Lu Hou
author_email = houlu8674@bupt.edu.cn
description = Emulate LoRa mote (a.k.a end-device) and gateway.
long_description = file: README.rst
keywords = LoRa, mote
license = MIT
[options]
packages = find:
install_requires = 
    pycryptodome
[options.entry_points]
console_scripts = 
    mote = src:main
[options.packages.find]
where=src
