[metadata]
name = lora-mote-emulator
version = attr:src.version.__version__
author = Lu Hou
author_email = houlu8674@bupt.edu.cn
description = Emulate LoRa mote (a.k.a end-device) and gateway.
long_description = file: README.rst
keywords = LoRa, mote
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing :: Traffic Generation
[options]
include_package_data = True
packages = src
setup_requires =
    setuptools
install_requires = 
    pycryptodome
[options.entry_points]
console_scripts = 
    mote = src:main
